exports[`GetArticle relatedArticles should work 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "relatedArticles": Array [
        Object {
          "id": "foo3",
          "text": "Lorum ipsum Lorum ipsum Lorum ipsum",
        },
        Object {
          "id": "foo2",
          "text": "Lorum ipsum Lorum ipsum",
        },
      ],
    },
  },
}
`;

exports[`GetArticle relatedArticles should work 2`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "relatedArticles": Array [
        Object {
          "id": "foo3",
          "text": "Lorum ipsum Lorum ipsum Lorum ipsum",
        },
      ],
    },
  },
}
`;

exports[`GetArticle relatedArticles should work 3`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "relatedArticles": Array [
        Object {
          "id": "foo2",
          "text": "Lorum ipsum Lorum ipsum",
        },
        Object {
          "id": "foo3",
          "text": "Lorum ipsum Lorum ipsum Lorum ipsum",
        },
      ],
    },
  },
}
`;

exports[`GetArticle should get the specified article & associated replies from ID 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "references": Array [
        Object {
          "type": "LINE",
        },
      ],
      "replies": Array [
        Object {
          "versions": Array [
            Object {
              "reference": "barbar",
              "text": "bar",
              "type": "NOT_ARTICLE",
            },
          ],
        },
      ],
      "replyCount": 1,
      "replyRequestCount": 1,
      "requestedForReply": true,
      "text": "Lorum ipsum",
    },
  },
}
`;

exports[`GetReply should get the specified reply & associated articles from ID 1`] = `
Object {
  "data": Object {
    "GetReply": Object {
      "articles": Array [
        Object {
          "text": "Lorum ipsum",
        },
      ],
      "versions": Array [
        Object {
          "reference": "barbar",
          "text": "bar",
          "type": "NOT_ARTICLE",
        },
      ],
    },
  },
}
`;
